[package]
name = "genrand"
version = "0.1.0"
edition = "2021"

authors = ["Teague Lasser <contact@teague.info>"]
description = "Generate random alphanumeric strings"
license = "MIT"
categories = ["command-line-utilities"]
homepage = "https://github.com/kraemahz/genrand"
repository = "https://github.com/kraemahz/genrand"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }

[lints.clippy]
cargo = "allow"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
